@@ -4,6 +4,8 @@ CHANGE LOG
 
 Changes up to 0.99
 
+
+    * various fixed to the alignment & matrix handling code 
     
     beta32
 
